# nodaris-core

./: .gitignore  AUDIT_IO.md  TREE.md  pyproject.toml
data/: appliances.yaml  pipes.yaml  singular_losses_cold_water.yaml  water_atm_table.yaml
ndc_core/catalogs/: __init__.py  appliance_catalog.py  fluid_catalog.py  pipe_catalog.py  singular_loss_catalog.py
ndc_core/common/: __init__.py  errors.py  messages.py  result.py  status.py
ndc_core/domain/: __init__.py  appliances.py  fluids.py  pipes.py  singular_losses.py
ndc_core/hydraulics/: __init__.py  conversions.py  elevation_pressure_loss.py  friction.py  linear_pressure_loss.py  pipe_sizing.py  reynolds.py  singular_pressure_loss.py  total_pressure_loss.py  types.py  velocity.py
ndc_core/networks/: __init__.py
tests/catalogs/: test_appliance_catalog.py  test_catalog_paths.py  test_fluid_catalog.py  test_pipe_catalog.py  test_real_catalog_file.py  test_singular_loss_catalog.py  test_yaml_loader.py
tests/common/: test_messages.py  test_result.py
tests/domain/: test_appliances.py  test_fluids.py  test_pipes.py  test_singular_losses.py
tests/helpers/: catalog_builders.py  network_builders.py
tests/hydraulics/: test_conversions.py  test_friction.py  test_pipe_sizing.py  test_pressure_losses.py  test_reynolds.py  test_total_pressure_loss.py  test_velocity.py
tests/integration/: test_cold_water_full_workflow.py  test_domestic_water_mixed_network.py  test_domestic_water_pressure_diagnostics.py  test_hot_water_full_workflow.py
tests/networks/: test_network_domain_integration.py  test_public_api.py
(+80 files in other folders)
